@@ -191,6 +191,7 @@ class SpecialPage {
 		'Mycontributions'           => 'SpecialMycontributions',
 		'Mypage'                    => 'SpecialMypage',
 		'Mytalk'                    => 'SpecialMytalk',
+		'Myuploads'					=> 'SpecialMyuploads',
 		'Revisiondelete'            => 'SpecialRevisionDelete',
 		'RevisionMove'              => 'SpecialRevisionMove',
 		'Specialpages'              => 'SpecialSpecialpages',
@@ -1015,5 +1016,20 @@ class SpecialMycontributions extends UnlistedSpecialPage {
 	function getRedirect( $subpage ) {
 		global $wgUser;
 		return SpecialPage::getTitleFor( 'Contributions', $wgUser->getName() );
+	}
+}
+
+/**
+ * Redirect to Special:Listfiles?user=$wgUser
+ */
+class SpecialMyuploads extends UnlistedSpecialPage {
+	function __construct() {
+		parent::__construct( 'Myuploads' );
+		$this->mAllowedRedirectParams = array( 'limit' );
+	}
+	
+	function getRedirect( $subpage ) {
+		global $wgUser;
+		return SpecialPage::getTitleFor( 'Listfiles', $wgUser->getName() );
 	}
 }
