@@ -215,6 +215,7 @@ LocalSettings.php. The specific bugs are listed below in the general notes.
   number of the textsize in Byte
 * (bug 3276) Give image <gallery>s fluid width
 * Added uploads link to page subtitle in Special:Contributions
+* Added Special:Myuploads special page that redirects to Special:Listfiles
 
 === Bug fixes in 1.17 ===
 * (bug 17560) Half-broken deletion moved image files to deletion archive
